examples/invalid/syntax/5.lua
local s = "unterminated string

local s = "строка с
переносом"

local s = [[многострочная
строка без закрытия

-- ОШИБКА: неправильная escape-последовательность
local s = "\q"

-- ОШИБКА: неправильное экранирование кавычки
local s = "\"  -- правильно: "\""

-- ОШИБКА: несбалансированные длинные скобки
local s = [==[ текст с [=[ неправильными скобками ]=]